added pagination and report

--- a/vege/templates/base.html
+++ b/vege/templates/base.html
@@ -9,7 +9,7 @@
 <body>
     <nav class="navbar p-2 shadow-lg" style='background-color:rgb(204,255,204);'>
         <div class="container-fluid">
-            <a class="navbar-brand"><large><i>Welcome to Recipes</i></large></a>
+            <a class="navbar-brand"><large><i>Welcome</i></large></a>
             <form class="d-flex" role="search">
             {% if request.user.is_authenticated %}
                 <a href="/logout/" class="btn btn-success" type="submit">Logout</a>
