added search functionality to report card

--- a/vege/templates/reports/students.html
+++ b/vege/templates/reports/students.html
@@ -2,6 +2,16 @@
 
 {% block start %}
     <div class="container mt-5">
+        <form>
+            <div class="row">
+                <div class="col-md-6">
+                    <input class="form-control" name="search" placeholder="search">
+                </div>
+                <div class="col-md-6">
+                    <button class="btn btn-success">Search</button>
+                </div>
+            </div>
+        </form>
         <table class="table table-striped">
             <thead>
                 <tr>
