--- a/vege/templates/reports/students.html
+++ b/vege/templates/reports/students.html
@@ -28,7 +28,9 @@
 
                 <tr>
                 <th scope="row">{{forloop.counter}}</th>
-                <td>{{student.student_id}}</td>
+                <td><a href="{% url 'see_marks' student.student_id %}">
+                    {{student.student_id}}</a>
+                </td>
                 <td>{{student.department.department}}</td>
                 <td>{{student.student_name}}</td>
                 <td>{{student.student_email}}</td>
@@ -49,11 +51,6 @@
                 <span class="current">
                     Page {{ queryset.number }} of {{ queryset.paginator.num_pages }}.
                 </span>
-
-                {% if queryset.has_next %}
-                    <li class="page-item"><a class="page-link" href="?page={{ queryset.next_page_number }}">next</a></li>
-                    <li class="page-item"><a class="page-link" href="?page={{ queryset.paginator.num_pages }}">last &raquo;</a></li>
-                {% endif %}
             </ul>
         </nav>
     </div>
