--- a/vege/templates/home.html
+++ b/vege/templates/home.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
 
 {% block start %}
-    <div style="position:center" class="container">
-        <h4>Need an Email ? Sure ,click the button below</h4>
-        <a href="#" class="btn btn-primary" role="button">Send Email</a><br/><br/>
+    <div style="margin-top:2%;display:flex;flex-direction:column;align-items:center;" class="container">
+        <h4>Need an Email ? Sure ,click the button below</h4><br>
+        <a href="{% url 'send_email' %}" class="btn btn-primary" role="button">Send Email</a><br/><br/>
     </div>
 {% endblock %}
